      | | |  __/ |_| | | (_) |  _| (_) | |  | |_| | | |
      |_|  \___|\__|_|  \___/|_|  \___/|_|   \__|_| |_|

            RetroForth & nga 2024.4 Release Notes

================================================================

- removed duplicate typedef in tools/retro-muri.c (rep by sevan)
- fixed a bug in load_image()                 (C) (rep by sevan)
- err:notfound message no longer in C         (C) (sevan)
- add -v for verbose mode                     (C)
- now skip execuion of NOP instructions       (C)
- fix some casting issues in C                (C)
- force immediate exit() on HA instruction    (C)
- added an implementation of Nga in D         (D)
- removed some unneeded files
- update tools/missing-dsource.retro
- add missing source data for vocabularies & globals:
  a: d: double: err: file: fll: mem: script:
- use strlcpy() in tools/retro-muri.c
- quieter output when building
- remove old Python build + packaging code
- small optimizations in fll: vocabulary
- move from interface/ to package/extensions/:
  double.retro malloc.retro
- fix misc. typos
- in retro-muri.c, use bsd_strlcpy   (rep by fangchar)
- in retro.forth, fix `s:index/char` (rep by fangchar)
- add example/irc-logger.retro
- add example/ilo-export.retro
- file:read-line now provided by file device (C)
- retro-describe now using hash based name comparison
- retro-describe small reductions in call/return overhead
- nga-x11: Retro on X11
- add (termina) vocabulary from ilo [console position, colors]
- fix bugs in retro-compiler(1) preventing compilation
- fix bug in retro-compiler(1) causing compiled programs to
  hang on startup
- added an initial man page for retro-compiler(1)
- added new example showing decompression of ulz files
- configuration of devices can now be done in either config.h
  or (by default) Configuration.mk
- build instructions for enabling/disabling devices updated

================================================================