@@ -44,5 +44,7 @@
 - configuration of devices can now be done in either config.h
   or (by default) Configuration.mk
 - build instructions for enabling/disabling devices updated
+- use mode array instead of conditionals when opening files and
+  pipes
 
 ================================================================
